--- a/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/StartOrder/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/StartOrder/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@section Styles
-{
-    <link href="~/font-awesome/css/all.min.css" rel="stylesheet" />
+	{
+	<link href="~/font-awesome/css/all.min.css" rel="stylesheet" />
 	<link href="~/orderforhere/startordercss/barfiller.css" rel="stylesheet" />
 	<link href="~/orderforhere/startordercss/bootstrap.min.css" rel="stylesheet" />
 	<link href="~/orderforhere/startordercss/elegant-icons.css" rel="stylesheet" />
@@ -10,232 +10,179 @@
 	<link href="~/orderforhere/startordercss/slicknav.min.css" rel="stylesheet" />
 	<link href="~/orderforhere/startordercss/style.css" rel="stylesheet" />
 	<link href="~/orderforhere/startordercss/owl.carousel.min.css" rel="stylesheet" />
-    <style>
-        body{
-            background-color: rgba(12, 11, 9, 0.3);
-        }
-        section{
-            margin: 50px;
-        }
-        #header{
-            margin: 0px;
-        }
+	<link href="~/css/menustyle.css" rel="stylesheet" />
+	<style>
+		body {
+			background-color: rgba(12, 11, 9, 0.3);
+		}
 
-        #header .cartPrice{
-            color: white;
-        }
+		section {
+			margin-top: 33px;
+		}
 
-        #header .cartPrice:hover{
-            color: orange;
-        }
-    </style>
+		#header {
+			margin: 0px;
+		}
+
+			#header .cartPrice {
+				color: white;
+			}
+
+				#header .cartPrice:hover {
+					color: orange;
+				}
+		/*
+				.spad{
+					margin-bottom: -50px;
+				}*/
+		i {
+			pointer-events: none;
+			font-size: 1rem;
+		}
+
+		button {
+			border: 0;
+			background-color: rgba(12, 11, 9, 0.3);
+		}
+
+		.btn-primary {
+			color: #fff;
+			background-color: darkorange;
+			border-color: orangered;
+		}
+
+			.btn-primary:hover {
+				background-color: darkred;
+				border-color: firebrick;
+			}
+
+		.btninput {
+			display: flex;
+		}
+
+		input {
+			width: 50%;
+			border: 0;
+			text-align: center;
+			background-color: #CCC;
+		}
+
+		.card {
+			background-color: burlywood
+		}
+
+		.card-body {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+		}
+	</style>
 }
 
 <!-- ======= Header ======= -->
-<header id="header" class="fixed-top d-flex align-items-center" >
+<header id="header" class="fixed-top d-flex align-items-center">
 	<div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
 		<h1 class="logo me-auto me-lg-0"><a href="#">享食點餐趣</a></h1>
-        <div class="cart__price" style="color: white;">消費金額: <span style="color: white;">$0.00</span></div>
-        <a asp-controller="ShoppingCart" class="cartPrice"><i class="fa fa-shopping-cart" style="font-size: 24px;"></i></a>
+		<div class="cart__price" style="color: white;">消費金額: <span style="color: white;">$0.00</span></div>
+		<a asp-controller="ShoppingCart" class="cartPrice"><i class="fa fa-shopping-cart" style="font-size: 24px;"></i></a>
 	</div>
 </header>
 
-
-<section class="shop spad">
-    <div class="container">
-        <div class="shop__option">
-            <div class="row">
-                <div class="col-lg-7 col-md-7">
-                    <div class="shop__option__search">
-                        <form action="#" style="border:none">
-                            <div class="shop__last__option">
-                                <div class="row" >
-                                    <div class="col-lg-6 col-md-6 col-sm-6">
-                                        <div class="shop__pagination shop__pagination d-flex justify-content-between">
-                                            <a href="#" class="flex-fill">沙拉</a>
-                                            <a href="#" class="flex-fill">麵包</a>
-                                            <a href="#" class="flex-fill">主食</a>
-                                            <a href="#" class="flex-fill">湯品</a>
-                                            <a href="#" class="flex-fill">甜點</a>
-                                    </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3);">
-                <div class="product__item">
-                    <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/bread-barrel.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
-                        <div class="product__label">
-                            <span>Cupcake</span>
-                        </div>
-                    </div>
-                    <div class="product__item__text">
-                        <h6><a href="#">Dozen Cupcakes</a></h6>
-                        <div class="product__item__price">$32.00</div>
-                        <div class="cart_add">
-                            <a href="#">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
-                <div class="product__item">
-                    <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/caesar.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
-                        <div class="product__label">
-                            <span>Cupcake</span>
-                        </div>
-                    </div>
-                    <div class="product__item__text">
-                        <h6><a href="#">Cookies and Cream</a></h6>
-                        <div class="product__item__price">$30.00</div>
-                        <div class="cart_add">
-                            <a href="#">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
-                <div class="product__item">
-                    <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/cake.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
-                        <div class="product__label">
-                            <span>Cupcake</span>
-                        </div>
-                    </div>
-                    <div class="product__item__text">
-                        <h6><a href="#">Gluten Free Mini Dozen</a></h6>
-                        <div class="product__item__price">$31.00</div>
-                        <div class="cart_add">
-                            <a href="#">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
-                <div class="product__item">
-                    <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/greek-salad.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
-                        <div class="product__label">
-                            <span>Cupcake</span>
-                        </div>
-                    </div>
-                    <div class="product__item__text">
-                        <h6><a href="#">Cookie Dough</a></h6>
-                        <div class="product__item__price">$25.00</div>
-                        <div class="cart_add">
-                            <a href="#">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
-                <div class="product__item">
-                    <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/lobster-bisque.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
-                        <div class="product__label">
-                            <span>Cupcake</span>
-                        </div>
-                    </div>
-                    <div class="product__item__text">
-                        <h6><a href="#">Vanilla Salted Caramel</a></h6>
-                        <div class="product__item__price">$05.00</div>
-                        <div class="cart_add">
-                            <a href="#">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
-                <div class="product__item">
-                    <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/lobster-roll.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
-                        <div class="product__label">
-                            <span>Cupcake</span>
-                        </div>
-                    </div>
-                    <div class="product__item__text">
-                        <h6><a href="#">German Chocolate</a></h6>
-                        <div class="product__item__price">$14.00</div>
-                        <div class="cart_add">
-                            <a href="#">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
-                <div class="product__item">
-                    <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/mozzarella.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
-                        <div class="product__label">
-                            <span>Cupcake</span>
-                        </div>
-                    </div>
-                    <div class="product__item__text">
-                        <h6><a href="#">Dulce De Leche</a></h6>
-                        <div class="product__item__price">$32.00</div>
-                        <div class="cart_add">
-                            <a href="#">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
-                <div class="product__item">
-                    <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/spinach-salad.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
-                        <div class="product__label">
-                            <span>Cupcake</span>
-                        </div>
-                    </div>
-                    <div class="product__item__text">
-                        <h6><a href="#">Mississippi Mud</a></h6>
-                        <div class="product__item__price">$08.00</div>
-                        <div class="cart_add">
-                            <a href="#">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6" style="border: 3px solid wheat; background-color: rgba(12, 11, 9, 0.3)">
-                <div class="product__item">
-                    <div class="product__item__pic set-bg">
-                        <img src="~/img/menu/tuscan-grilled.jpg" style="width:200px; border-radius:15px; margin: 15px;" />
-                        <div class="product__label">
-                            <span>Cupcake</span>
-                        </div>
-                    </div>
-                    <div class="product__item__text">
-                        <h6><a href="#">VEGAN/GLUTEN FREE</a></h6>
-                        <div class="product__item__price">$98.85</div>
-                        <div class="cart_add">
-                            <a href="#">Add to cart</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-           
-        </div>
-    </div>
+<section id="menuItem" class="menu section-bg">
+	<div class="row" data-aos="fade-up" data-aos-delay="100">
+		<div class="col-lg-12 d-flex justify-content-center">
+			<ul id="menu-flters">
+				<li data-filter="*" class="filter-active">全部</li>
+				<li data-filter=".filter-appetizer">前菜</li>
+				<li data-filter=".filter-soups">湯品</li>
+				<li data-filter=".filter-mainMeal">主餐</li>
+				<li data-filter=".filter-snacks">點心</li>
+				<li data-filter=".filter-dessert">甜點</li>
+				<li data-filter=".filter-beverage">飲料</li>
+			</ul>
+		</div>
+	</div>
 </section>
+
+<div class="container-fluid" id="product">
+	<div class="row">
+		<div class="card col-3 m-3" v-for="product in products">
+			<img :src="product.MealImg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">{{product.productName}}</h5>
+				<p class="card-text">$: {{product.unitPrice}}</p>
+				<div class="btninput">
+					<button v-on:click="minusone"><i class="fa-sharp fa-solid fa-square-minus"></i></button>
+					<input type="number" min="0" max="20" value="0" readonly>
+					<button v-on:click="addone"><i class="fa-sharp fa-solid fa-square-plus"></i></button>
+				</div>
+				<a href="#" v-on:click="send(product)" class="btn btn-primary">ADD</a>
+			</div>
+		</div>
+	</div>
+</div>
 
 
 @section Scripts
-{
+	{
+	<script src="~/axios/axios.min.js"></script>
 	<script src="~/orderforhere/startorderjs/bootstrap.min.js"></script>
-    <script src="~/orderforhere/startorderjs/jquery-3.3.1.min.js"></script>
+	<script src="~/orderforhere/startorderjs/jquery-3.3.1.min.js"></script>
 	<script src="~/orderforhere/startorderjs/jquery.barfiller.js"></script>
 	<script src="~/orderforhere/startorderjs/jquery.magnific-popup.min.js"></script>
 	<script src="~/orderforhere/startorderjs/jquery.nicescroll.min.js"></script>
 	<script src="~/orderforhere/startorderjs/jquery.slicknav.js"></script>
-    <script src="~/orderforhere/startorderjs/jquery.nice-select.min.js"></script>
+	<script src="~/orderforhere/startorderjs/jquery.nice-select.min.js"></script>
 	<script src="~/orderforhere/startorderjs/main.js"></script>
 	<script src="~/orderforhere/startorderjs/owl.carousel.min.js"></script>
+	<script>
+		const vm = new Vue({
+			el: "#product",
+			data: {
+				products: [],
+			},
+			methods: {
+				GetProducts: function () {
+					let self = this;
+					axios.get('/api/StartOrderApi/GetAllProducts')
+						.then(function (response) {
+							self.products = response.data;
+						})
+						.catch(function (error) {
+							console.log(error);
+						});
+				},
+				addone: function (e) {
+					if (e.target.parentElement.children[1].value < 20) {
+						e.target.parentElement.children[1].value = e.target.parentElement.children[1].value * 1 + 1
+					} else {
+						e.target.parentElement.children[1].value = 20
+					}
+				},
+				minusone: function (e) {
+					if (e.target.parentElement.children[1].value > 0) {
+						e.target.parentElement.children[1].value -= 1
+					} else {
+						e.target.parentElement.children[1].value = 0
+					}
+				},
+				send: function (product) {
+					let body = {
+						ProductId: product.ProductId,
+						ProductName: product.ProductName,
+						UnitPrice: product.UnitPrice
+					}
+					fetch("/api/StartOrderApi/AddToCart", {
+						body: JSON.stringify(body),
+						headers: { 'content-type': 'application/json' },
+						method: 'POST'
+					}).then(function (response) { return response.json() })
+				}
+			},
+			mounted: function () {
+
+				this.GetProducts();
+			}
+		})
+	</script>
 }
