--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/EmployeeManagement/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/EmployeeManagement/Index.cshtml
@@ -67,11 +67,13 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="form-group">
 		<table class="table table-striped table-hover">
 			<thead>
 				<tr class="titleName">
 					<td>編輯</td>
+					<td>員工編號</td>
 					<td>員工姓名</td>
 					<td>性別</td>
 					<td>生日</td>
@@ -82,19 +84,19 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr v-for="item in EmployeeManagementViewModel">
+				<tr v-for="item in EmployeeManagementDTO">
 					<template v-if="item.Edit==true">
-						@*編輯範本*@
+						@*進入編輯狀態*@
 						<td>
 							<button class="btn btn-success" @@click="update(item)">修改</button>
 							<button class="btn btn-warning" @@click="cancel()">取消</button>
 						</td>
 						<td>{{item.employeeId}}</td>
-						<td><input v-model="item.Name" /></td>
-						<td><input v-model="item.Gender" /></td>
-						<td><input v-model="item.Birthday" /></td>
-						<td><input v-model="item.Phone" /></td>
-						<td><input v-model="item.Email" /></td>
+						<td><input v-model="item.name" /></td>
+						<td><input v-model="item.gender" /></td>
+						<td><input v-model="item.birthday" /></td>
+						<td><input v-model="item.phone" /></td>
+						<td><input v-model="item.email" /></td>
 						<td><input v-model="詳細資料" /></td>
 						<td><input v-model="薪資" /></td>
 					</template>
@@ -105,9 +107,13 @@
 							<button class="btn btn-danger" @@click="deleteEmployee(item.employeeId)">刪除</button>
 						</td>
 						<td>{{item.employeeId}}</td>
-						<td>{{item.firstName}}</td>
-						<td>{{item.lastName}}</td>
-						<td>{{item.title}}</td>
+						<td>{{item.name}}</td>
+						<td>{{item.gender}}</td>
+						<td>{{item.birthday}}</td>
+						<td>{{item.phone}}</td>
+						<td>{{item.email}}</td>
+						<td>詳細資料</td>
+						<td>薪資</td>
 					</template>
 				</tr>
 			</tbody>
@@ -116,6 +122,7 @@
 </div>
 
 @section Scripts {
+	<script src="~/axios/axios.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.js"></script>
 	<script>
@@ -125,28 +132,20 @@
 					EmployeeManagementDTO: [],
 				};
 			},
-			mounted: function () {
-				let self = this;
-				self.EmployeeManagementDTO();
-			},
 			methods: {
-
-				edit: function (employeeId) {
-					let self = this;
-					var EmployeeList = [];
-					for (var i = 0; i < self.EmployeeManagementDTO.length; i++) {
-						var item = self.EmployeeManagementDTO[i];
-						if (employeeId == item.employeeId) {
-							item.Edit = true;
-							self.
-												}
-					}
+				update: function (empDTO) {
+					alert("update");
+				},
+				edit: function () {
+					alert("edit");
+				},
+				deleteEmployee: function (employeeId) {
+					alert("delete");
 				}
-
 			}
-
 		};
 
+		var app = Vue.createApp(vueApp).mount('#app');
 
 
 	</script>
