--- a/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
     <link href="~/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="~/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="~/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
     <!-- Template Main CSS File -->
 	<link href="~/css/style.css" rel="stylesheet" />
