--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/EmployeeManagement/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/EmployeeManagement/Index.cshtml
@@ -1,29 +1,153 @@
 ﻿@section Styles
-{
-
+	{
+	<style>
+		.titleName td {
+			font-size: 20px;
+		}
+	</style>
 }
 
-<!-- Sign In Start -->
-<div class="row h-100 align-items-center justify-content-center">
-	<div class="col-12 ">
-		<div class="bg-secondary rounded p-4 p-sm-5 my-4 mx-3">
-			<div class="d-flex align-items-center justify-content-between mb-3">
-				<h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>後臺管理</h3>
-				<h3>登入</h3>
+<div id="app" class="container">
+	<div class="form-group">
+		@*新增按鍵*@
+		<!-- Modal trigger button -->
+		<button type="button" @@click="showInsertPage" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#modalId" style="margin: 33px 0px">
+			新增員工
+		</button>
+	</div>
+	<div class="form-group">
+		@*新增紀錄畫面*@
+		<div class="modal fade" id="insertPage" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-sm" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="modalTitleId">Modal title</h5>
+						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+						@*頁面內容Body*@
+						<div class="form-group">
+							<label class="form-label">員工姓名:</label>
+							<input class="form-control" v-model="Name" />
+						</div>
+						<div class="form-group">
+							<label class="form-label">身分證:</label>
+							<input class="form-control" v-model="IdentityId" />
+						</div>
+						<div class="form-group">
+							<label class="form-label">性別:</label>
+							<input class="form-control" v-model="Gender" />
+						</div>
+						<div class="form-group">
+							<label class="form-label">生日:</label>
+							<input class="form-control" v-model="Birthday" />
+						</div>
+						<div class="form-group">
+							<label class="form-label">電話:</label>
+							<input class="form-control" v-model="Phone" />
+						</div>
+						<div class="form-group">
+							<label class="form-label">住址:</label>
+							<input class="form-control" v-model="Address" />
+						</div>
+						<div class="form-group">
+							<label class="form-label">Email:</label>
+							<input class="form-control" v-model="Email" />
+						</div>
+						<div class="form-group">
+							<label class="form-label">學歷:</label>
+							<input class="form-control" v-model="Education" />
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">關閉</button>
+						<button type="button" @@click="insert" class="btn btn-primary">新增</button>
+					</div>
+				</div>
 			</div>
-			<div class="form-floating mb-3">
-				<input type="email" class="form-control" id="floatingInput" placeholder="帳號" required>
-				<label for="floatingInput">員工帳號</label>
-			</div>
-			<div class="form-floating mb-4">
-				<input type="password" class="form-control" id="floatingPassword" placeholder="密碼" required>
-				<label for="floatingPassword">員工密碼</label>
-			</div>
-			<button type="submit" class="btn btn-primary py-3 w-100 mb-4">登入</button>
 		</div>
 	</div>
-</div>
-@section Scripts {
 
-	<script></script>
-}
+	<div class="form-group">
+		<table class="table table-striped table-hover">
+			<thead>
+				<tr class="titleName">
+					<td>編輯</td>
+					<td>員工編號</td>
+					<td>員工姓名</td>
+					<td>性別</td>
+					<td>生日</td>
+					<td>電話</td>
+					<td>Email</td>
+					<td>詳細資料</td>
+					<td>薪資</td>
+				</tr>
+			</thead>
+			<tbody>
+				<tr v-for="item in EmployeeManagementDTO">
+					<template v-if="item.Edit==true">
+						@*進入編輯狀態*@
+						<td>
+							<button class="btn btn-success" @@click="update(item)">修改</button>
+							<button class="btn btn-warning" @@click="cancel()">取消</button>
+						</td>
+						<td>{{item.employeeId}}</td>
+						<td><input v-model="item.name" /></td>
+						<td><input v-model="item.gender" /></td>
+						<td><input v-model="item.birthday" /></td>
+						<td><input v-model="item.phone" /></td>
+						<td><input v-model="item.email" /></td>
+						<td><input v-model="詳細資料" /></td>
+						<td><input v-model="薪資" /></td>
+					</template>
+					<template v-else>
+						@*顯示範本*@
+						<td>
+							<button class="btn btn-primary" @@click="edit(item.employeeId)">編輯</button>
+							<button class="btn btn-danger" @@click="deleteEmployee(item.employeeId)">刪除</button>
+						</td>
+						<td>{{item.employeeId}}</td>
+						<td>{{item.name}}</td>
+						<td>{{item.gender}}</td>
+						<td>{{item.birthday}}</td>
+						<td>{{item.phone}}</td>
+						<td>{{item.email}}</td>
+						<td>詳細資料</td>
+						<td>薪資</td>
+					</template>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
+
+@section Scripts {
+	<script src="~/axios/axios.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.js"></script>
+	<script>
+		var vueApp = {
+			data() {
+				return {
+					EmployeeManagementDTO: [],
+				};
+			},
+			methods: {
+				update: function (empDTO) {
+					alert("update");
+				},
+				edit: function () {
+					alert("edit");
+				},
+				deleteEmployee: function (employeeId) {
+					alert("delete");
+				}
+			}
+		};
+
+		var app = Vue.createApp(vueApp).mount('#app');
+
+
+	</script>
+	}
+
