--- a/EnjoyEat/EnjoyEat/Views/OrderTogo/Order.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/OrderTogo/Order.cshtml
@@ -49,7 +49,7 @@
     </style>
 }
 
-<div class="#app">
+<div id="app">
     <div class="section-title">
         <h2>Order</h2>
         <p>Check Our Tasty Menu</p>
@@ -130,10 +130,10 @@
                     _this.baseUrl = window.location.origin + '/';
                     axios.get("https://localhost:7071/api/menu/GetMenu")
                         .then(response => {
-                            window.scrollBy(0, 1);
                             _this.temp = response.data;
                             console.log(JSON.stringify(response.data));
                         });
+                    window.scrollBy(0, 1);
                 }
         });
     </script>
