--- a/EnjoyEat/EnjoyEat/wwwroot/css/Reservations.css
+++ b/EnjoyEat/EnjoyEat/wwwroot/css/Reservations.css
@@ -4,17 +4,10 @@
     font-size: 14px;
 }
 
-#adultPicker {
-    margin: 5px;
-}
-
-#kidPicker {
-    margin: 5px;
-}
-
-#calendar {
+#adultPicker, #kidPicker, #calendar {
     margin: 10px;
 }
+
 
 #finalReservation {
     z-index: 10000;
@@ -61,7 +54,7 @@
     padding-left: 15px;
 }
 
-#sameMemberCheck {
+#sameMemberCheck, #femaleCheck, #maleCheck {
     height: 15px;
 }
 
@@ -70,13 +63,7 @@
     color: #bab3a6;
 }
 
-#femaleCheck {
-    height: 15px;
-}
 
-#maleCheck {
-    height: 15px;
-}
 #bookReturn {
     background: #cda45e;
     border: 0;
@@ -106,22 +93,22 @@ textarea {
 }
 
 .calendar {
-    margin-left: -5px;
+    margin-left: -2px;
     left: 0px;
     padding: .375rem 2.25rem .375rem .75rem;
 }
 
 #datepicker input {
     height: 38px;
+    width: 100%;
     color: black;
     background-color: #fff;
     border-radius: .25rem;
     font-weight: 400;
     line-height: 1.5;
-    width: 100%;
-    margin-left: -5px;
     display: block;
     padding: .375rem 2.25rem .375rem .75rem;
+
 }
 
 #datepicker input::placeholder {
@@ -133,9 +120,7 @@ textarea {
     font-weight: lighter;
 }
 
-.mx-calendar-content .cell.active {
-    background-color: #721b29;
-}
+
 
 .mx-datepicker-main {
     color: #333;
@@ -143,49 +128,22 @@ textarea {
 }
 
 .mx-calendar-content .cell:hover {
-    /* background-color: #721B29;
-    color: white;*/
+     background-color: #721B29;
+    color: white;
 }
 
 option:disabled {
     background-color: #F2E6E6;
     color: #666;
 }
-/*dialog 注意事項視窗*/
-dialog {
-    border: none;
-    box-shadow: 0 2px 6px #ccc;
-    border-radius: 30px;
-}
 
-    dialog::backdrop {
-        background-color: rgba(0, 0, 0, 0.1);
-    }
-
-#ruleContainer {
-    text-align: justify; /*設定左右對齊*/
-}
-
-    #ruleContainer p {
-        margin: 0 0 10px;
-    }
-
-#noticeRule {
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-    #noticeRule p {
-        font-family: "Poppins",sans-serif;
-        font-size: 14px;
-        color: red;
-    }
-
+/*欄位未填寫前button呈現灰色*/
 #finalReservation .nono {
     background-color: #aaa
 }
 
-/*contactUs頁面*/
-#enjoyEatLocation {
+    /*contactUs頁面*/
+    #enjoyEatLocation {
     margin-bottom: 48px;
 }
 
